# qtos-core

./: README.md  pyproject.toml
backtesting/: __init__.py  data_loader.py  engine.py  metrics.py  portfolio_report.py
examples/: buy_and_hold_backtest.py  live_trading_example.py  paper_trading_example.py
examples/data/: sample_ohlcv.csv
qtos_core/: __init__.py  event_loop.py  events.py  order.py  portfolio.py  risk.py  signal.py  strategy.py
qtos_core/examples/: __init__.py  buy_and_hold.py
qtos_core/execution/: __init__.py  broker.py  engine.py  live.py  paper.py  types.py
tests/: __init__.py  test_backtest.py  test_core.py  test_data_loader.py  test_execution.py
